# zbluez

./: Cargo.toml  build.rs
src/: main.rs  simple_bluez.rs  simple_interface.rs  simple_server.rs
src/bluez/: adapter.rs  agent_manager.rs  device.rs  gatt_manager.rs  health_manager.rs  leadvertising_manager.rs  media.rs  mod.rs  network_server.rs  profile_manager.rs
src/rpc/: grpc_bluez.proto  grpc_bluez.rs  rpc_bluez.rs  server.rs
