[package]
name = "zbluez"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus="4.1"
zbus_macros = "4.1"
tokio= {version = "1.36", features = ["full"]}
#tokio= {version = "1.36"}
tokio-stream = "0.1"
libc = "0.2"
